数据结构与算法

--- a/技术笔记/zhenk/算法与数据结构/01.数组/02.数组排序/08.基数排序.md
+++ b/技术笔记/zhenk/算法与数据结构/01.数组/02.数组排序/08.基数排序.md
@@ -15,3 +15,72 @@
    1. 定义一个长度为 $10$ 的桶数组 $buckets$，每个桶分别代表 $0 \sim 9$ 中的 $1$ 个数字。
    2. 按照每个元素当前位上的数字，将元素放入对应数字的桶中。
    3. 清空原始数组，然后按照桶的顺序依次取出对应元素，重新加入到原始数组中。
+
+## 代码实现
+```java
+public class RadixSort {  
+    static final int loadFactor = 10;  
+  
+    public static void main(String[] args) {  
+        int[] array = {7, 3, 2, 10, 8, 1, 9, 5, 4, 6};  
+        sort(array, findHighestDigit(array));  
+        print(array);  
+    }  
+  
+    /**  
+     * LSD
+     * @param arr  
+     */  
+    private static void sort(int[] arr, int digitCount) {  
+  
+        final int[] result = new int[arr.length];  
+        // 桶数组  
+        final int[] count = new int[10];  
+        for (int i = 0; i < digitCount; i++) {  
+            // 计算i的几次方并算出各个位数的值
+            int division = (int) Math.pow(10, i);
+            for (int j = 0; j < arr.length; j++) {
+                int num = arr[j] / division % 10;
+                count[num]++;
+            }
+  
+            // 计数排序 start            
+            for (int j = 1; j < count.length; j++) {  
+                count[j] = count[j] + count[j - 1];  
+            }  
+  
+            for (int j = arr.length - 1; j >= 0; j--) {  
+                int num = arr[j] / division % 10;  
+                result[--count[num]] = arr[j];  
+            }  
+  
+            System.arraycopy(result, 0, arr, 0, arr.length);  
+            Arrays.fill(count, 0);  
+        }  
+  
+    }  
+    
+    /**  
+     * 找到数组中最大数的最高位
+     * @param arr  
+    */  
+    private static int findHighestDigit(int[] array) {  
+        int max = Arrays.stream(array).max().getAsInt();  
+        // 将整数转换为正数以处理负数情况  
+        max = Math.abs(max);  
+  
+        System.out.println("max:" + max);  
+        // 初始化除数和位数  
+        int divisor = 1;  
+        int digitCount = 1;  
+  
+        // 不断除以10，直到商为0  
+        while (max / divisor >= loadFactor) {  
+            divisor *= 10;  
+            digitCount++;  
+        }  
+        System.out.println("digitCount::" + digitCount);  
+        return digitCount;  
+    }  
+}
+```
