图灵电商项目实战+算法相关更新笔记

--- a/技术笔记/zhenk/算法与数据结构/01.数组/02.数组排序/02.希尔排序.md
+++ b/技术笔记/zhenk/算法与数据结构/01.数组/02.数组排序/02.希尔排序.md
@@ -123,6 +123,27 @@ private static void swap(int[] arr, int i, int j) {
 - 使用插入排序对每个子序列进行排序，因为插入排序对于小数组来说效率更高。
 - 在插入排序中，使用间隔值h来代替常规的1。
 
+### Ⅲ、🧁简化
+```java
+/**  
+ * @param arr        数组  
+ * @param loadFactor 希尔因子   2
+ */  
+public static void shellSort(int[] arr, int loadFactor) {  
+    for (int gap = arr.length / loadFactor; gap > 0; gap /= loadFactor) {  
+        // 有序数组0开始  
+        for (int i = gap; i < arr.length; i++) {  
+            for (int j = i; j > gap - 1; j -= gap) {  
+                if (arr[j] < arr[j - gap]) {  
+                    swap(arr, j, j - gap);  
+                }  
+            }  
+        }  
+    }  
+    print(arr);  
+}
+```
+
 ## 4、优缺点🍉
 
 🧁优点：
