--- a/技术笔记/zhenk/算法与数据结构/01.数组/02.数组排序/03.选择排序.md
+++ b/技术笔记/zhenk/算法与数据结构/01.数组/02.数组排序/03.选择排序.md
@@ -10,3 +10,24 @@
 ## 优化
 1. 遍历一次由只找到最小或者最大值改成同时找出最大最小值，然后分别放到数组的头尾。
 2. 下标为0的和后面一位数比较改成几个数中最大或最小值比较
+
+## 代码实现
+```java
+public static void selectionSort(int[] arr) {  
+    // 遍历数组  
+    for (int j = 0; j < arr.length - 1; j++) {  
+        // 默认最小值下标 从0 开始  
+        int minIndex = j;  
+        // 1. (找出最小值下标 minIndex) inIndex后面数组和minIndex进行比较找出最小值下标并赋值给minIndex  
+        for (int i = j + 1; i < arr.length; i++) {  
+            if (arr[i] < arr[minIndex]) {  
+                minIndex = i;  
+            }  
+        }  
+        // 2. 最小值minIndex和j下标的值对换  
+        swap(arr, j, minIndex);  
+    }  
+    print(arr);  
+}
+```
+
