--- a/技术笔记/zhenk/算法与数据结构/01.数组/02.数组排序/01.插入排序.md
+++ b/技术笔记/zhenk/算法与数据结构/01.数组/02.数组排序/01.插入排序.md
@@ -20,3 +20,18 @@
 - **平均时间复杂度**：$O(n^2)$。如果区间的初始情况是随机的，即参加排序的区间中元素可能出现的各种排列的概率相同，则可取上述最小值和最大值的平均值作为插入排序时所进行的元素之间的比较次数，约为 $\frac{n^2}{4}$。由此得知，插入排序算法的平均时间复杂度为 $O(n^2)$。
 - **空间复杂度**：$O(1)$。插入排序算法为原地排序算法，只用到指针变量 $i$、$j$ 以及表示无序区间中第 $1$ 个元素的变量等常数项的变量。
 - **排序稳定性**：在插入操作过程中，每次都讲元素插入到相等元素的右侧，并不会改变相等元素的相对顺序。因此，插入排序方法是一种 **稳定排序算法**。
+
+## 代码实现
+```java
+public static void insertionSort(int[] arr) {  
+    // 有序数组0开始  
+    for (int i = 1; i < arr.length; i++) {  
+        for (int j = i; j > 0; j--) {  
+            if (arr[j] < arr[j - 1]) {  
+                swap(arr, j, j - 1);  
+            }  
+        }  
+    }  
+    print(arr);  
+}
+```
