--- a/技术笔记/zhenk/算法与数据结构/01.数组/02.数组排序/04.冒泡排序.md
+++ b/技术笔记/zhenk/算法与数据结构/01.数组/02.数组排序/04.冒泡排序.md
@@ -10,3 +10,20 @@
 2. 对每一对相邻元素作同样的工作，从开始第一对到结尾的最后一对。这步做完后，最后的元素会是最大的数。
 3. 针对所有的元素重复以上的步骤，除了最后一个。
 4. 持续每次对越来越少的元素重复上面的步骤，直到没有任何一对数字需要比较。
+
+## 代码实现
+```java
+public static void bubbleSort(int[] arr) {  
+    // 2. 循环未排序的顶端  
+    for (int j = arr.length - 1; j > 0; j--) {  
+        // 1. 把最大值放到未排序的数组顶端,顶端不断的变小(找出最大值)  
+        for (int i = 0; i < j; i++) {  
+            if (arr[i] > arr[i + 1]) {  
+                swap(arr, i, i + 1);  
+            }  
+        }  
+    }  
+    print(arr);  
+}
+```
+
