添加解释器中的AST抽象语法树解释

--- a/技术笔记/zhenk/6.设计模式/notes/行为型模式/12.Intepreter解释器模式.md
+++ b/技术笔记/zhenk/6.设计模式/notes/行为型模式/12.Intepreter解释器模式.md
@@ -1,2 +1,50 @@
 > [!TIPS] 简介
-> 为语言创建解释器，通常由语言的语法和语法分析来定义。
+> 【**动态脚本解析**】为语言创建解释器，通常由语言的语法和语法分析来定义。用于解释一些特定的语法规则。解释器模式是一种行为型设计模式，它定义了一种语言文法的表示，并且定义了一个解释器，用于解释该语言中的句子。
+
+![[AST树.png]]
+
+## 摘要
+* 解释器模式是指定义一种语言文法，并设计该语言解释器来解释该语言中的句子。本质上来说，解释器模式属于一种特殊的Visitor设计模式。它在应用程序中通常用于解析自定义语言或者编写自定义脚本。在解释器模式中，通常会使用抽象语法树（AST）来表示句子。解释器模式中的几个核心角色包括抽象表达式（AbstractExpression）、终结符表达式（TerminalExpression）、非终结符表达式（NonterminalExpression）和上下文（Context）。
+
+* 在解释器模式中，抽象表达式是所有表达式的抽象基类，其中声明了各种解释方法。终结符表达式和非终结符表达式分别表示语法规则中的终结符和非终结符。终结符表达式表示语法规则中的基本元素，而非终结符表达式一般由多个终结符表达式和非终结符表达式组合而成。上下文则用来存储解释器执行过程中的中间结果，并提供给解释器访问。解释器通过解释语法规则，最终生成对应的结果。
+
+## 核心思想
+将一个复杂的语言（或表达式）解析成一个抽象语法树，然后再根据需要对该树进行遍历，并根据节点执行相应的操作。通过这种方式，可以将与语言相关的操作与语言本身分离开来，从而简化程序的设计和实现。
+## 结构
+### 角色
+**抽象表达式（Abstract Expression）**：定义解释器的接口，所有的表达式都必须实现该接口。
+**终结符表达式（Terminal Expression）**：表示语言中的基本元素，可以被解释。
+**非终结符表达式（Nonterminal Expression）**：表示语言中的复合元素，可以包含其他的表达式。
+**上下文（Context）**：包含解释器的全局信息，对解释器的调用和解释器之间的信息交换都通过上下文进行。
+**解释器（Interpreter）**：实现抽象表达式接口的具体类，用于解释语言中的语句或表达式。
+
+### 图解
+如下是解释器模式的UML类图：
+![[解释器的UML图.png]]
+
+
+## 应用场景
+解释器模式的应用场景如下：
+* **SQL解析器**：SQL语句可以使用解释器模式来解析成不同的命令，以实现不同的功能。
+* **数学公式解析器**：对于给定的表达式，解析器将其解析成抽象语法树，并将其转换为可执行的代码。
+* **编程语言解释器**：可以将编程语言的语法规则转换成虚拟机指令序列，以供执行。
+* **机器翻译**：将一种语言的文本翻译成另一种语言的过程中，可以使用解释器模式。
+* **正则表达式引擎**：解析正则表达式的引擎可以使用解释器模式来实现。
+* **模板解析器**：可以将模板语言解析成可执行的代码。
+* **配置文件解析器**：对于配置文件中的各种配置项，解析器可以将其解析成可执行的代码以实现相应的配置。
+
+总之，解释器模式可以应用于任何需要将一种语言或规则转化为另一种语言或规则的场景。
+
+## 优缺点
+### 优点
+1. 易于扩展新的语法规则，只需添加新的解释器即可。
+2. 可以对语言进行灵活的控制和调试，增加了代码的可读性和可维护性。
+3. 可以避免使用大量的条件判断语句，使代码更加简洁和易于理解。
+
+### 缺点
+
+1. 大规模使用解释器模式可能会**影响程序的性能**，因为表达式需要被递归地解释。
+2. 在解释器模式中，我们需要考虑语法规则，并将其抽象为表达式，这可能会增加代码的复杂度，降低代码的可读性和可维护性。
+3. 解释器模式的性能通常不如编译器性能高，因为解释器需要通过运行时解释语言，而编译器可以在编译阶段优化代码。
+4. 如果语法规则过于复杂，可能需要大量的解释器来解释，导致代码量过大，可读性降低。
+5. 可能会出现环路依赖的问题，导致解释器无法进行解释。
