--- a/技术笔记/zhenk/6.设计模式/notes/设计模式.md
+++ b/技术笔记/zhenk/6.设计模式/notes/设计模式.md
@@ -1,3 +1,13 @@
+![[各种设计模式.png]]
+
+# 创建型模式
+> [!TIP] 创建型模式简介
+> 创建型模式提供了创建对象的机制， 能够提升已有代码的灵活性和可复用性。
+
+## 工厂方法模式
+![[image-20231213113529940.png]]
+
+
 # 行为型模式
 > [!TIP] 行为型模式简介
 > 行为模式负责对象间的高效沟通和职责委派。
@@ -28,33 +38,6 @@
 ## [Bridge和Decorator之间区别](桥接和装饰者之间区别.md)
 
 # 模式总结表格
-
-|                             图解                             |                   设计模式                    |                             简述                             |           一句话归纳           |          目的          |    生活案例    |
-| :----------------------------------------------------------: | :-------------------------------------------: | :----------------------------------------------------------: | :----------------------------: | :--------------------: | :------------: |
-| ![1701757598733](1701757598733.png) |          工厂模式（Factory Pattern）          |                    不同条件下创建不同实例                    |     产品标准化，生产更高效     |      封装创建细节      |    实体工厂    |
-| ![1701757541716](1701757541716.png) |          抽象工厂（Factory Pattern）          |           提供一个创建一组相关或相互依赖对象的接口           |     产品标准化，生产更高效     |      封装创建细节      |    实体工厂    |
-| ![1701757614399](1701757614399.png) |         单例模式（Singleton Pattern）         |        保证一个类仅有一个实例，并且提供一个全局访问点        |         世上只有一个我         |      保证独一无二      |      CEO       |
-| ![1701757655273](1701757655273.png) |         原型模式（Prototype Pattern）         |                   通过拷贝原型创建新的对象                   |     拔一根猴毛，吹出千万个     |      高效创建对象      |      克隆      |
-| ![1701757675093](1701757675093.png) |         建造者模式（Builder Pattern）         |                    用来创建复杂的复合对象                    | 高配中配和低配，想选哪配就哪配 |    开放个性配置步骤    |      选配      |
-| ![1701757741231](1701757741231.png) |           代理模式（Proxy Pattern）           |         为其他对象提供一种代理以控制对这个对象的访问         | 没有资源没时间，得找别人来帮忙 |        增强职责        |      媒婆      |
-| ![1701757751037](1701757751037.png) |          外观模式（Facade Pattern）           |             对外提供一个统一的接口用来访问子系统             |     打开一扇门，通向全世界     |      统一访问入口      |     slf4j      |
-| ![1701757763887](1701757763887.png) |        装饰器模式（Decorator Pattern）        |                       为对象添加新功能                       |      他大舅他二舅都是他舅      |   灵活扩展、同宗同源   | JAVA IO ,奶茶  |
-| ![1701757775651](1701757775651.png) |         享元模式（Flyweight Pattern）         |                使用对象池来减少重复对象的创建                |   优化资源配置，减少重复浪费   |       共享资源池       |  数据库连接池  |
-| ![1701757787136](1701757787136.png) |         组合模式（Composite Pattern）         | 将整体与局部（树形结构）进行递归组合，让客户端能够以一种的方式对其进行处理 | 人在一起叫团伙，心在一起叫团队 |     统一整体和个体     |   组织架构树   |
-| ![1701757796122](1701757796122.png) |         适配器模式（Adapter Pattern）         |                将原来不兼容的两个类融合在一起                |           万能充电器           |        兼容转换        |    电源适配    |
-| ![1701757805486](1701757805486.png) |          桥接模式（Bridge Pattern）           |               将两个能够独立变化的部分分离开来               |          约定优于配置          |      不允许用继承      |       桥       |
-| ![1701757827844](1701757827844.png) |         模板模式（Template Pattern）          |          定义一套流程模板，根据需要实现模板中的操作          | 流程全部标准化，需要微调请覆盖 |        逻辑复用        | 把大象装进冰箱 |
-| ![1701757840931](1701757840931.png) |         策略模式（Strategy Pattern）          |              封装不同的算法，算法之间能互相替换              | 条条大道通罗马，具体哪条你来定 |    把选择权交给用户    |  选择支付方式  |
-| ![1701757851984](1701757851984.png) | 责任链模式（Chain of Responsibility Pattern） | 拦截的类都实现统一接口，每个接收者都包含对下一个接收者的引用。将这些对象连接成一条链，并且沿着这条链传递请求，直到有对象处理它为止。 |  各人自扫门前雪，莫管他们上霜  |      解耦处理逻辑      |     踢皮球     |
-| ![1701757865048](1701757865048.png) |         迭代器模式（Iterator Pattern          |         提供一种方法顺序访问一个聚合对象中的各个元素         | 流水线上坐一天，每个包裹扫一遍 |  统一对集合的访问方式  |  逐个检票进站  |
-| ![1701757875587](1701757875587.png) |          命令模式（Command Pattern）          |         将请求封装成命令，并记录下来，能够撤销与重做         |   运筹帷幄之中，决胜千里之外   |     解耦请求和处理     |     遥控器     |
-| ![1701757885486](1701757885486.png) |           状态模式（State Pattern）           |                 根据不同的状态做出不同的行为                 |   状态驱动行为，行为决定状态   |     绑定状态和行为     |  订单状态跟踪  |
-| ![1701757896180](1701757896180.png) |         备忘录模式（Memento Pattern）         |               保存对象的状态，在需要时进行恢复               | 失足不成千古恨，想重来时就重来 |     备份、后悔机制     |     草稿箱     |
-| ![1701757907358](1701757907358.png) |        中介者模式（Mediator Pattern）         | 将对象之间的通信关联关系封装到一个中介类中单独处理，从而使其耦合松散 | 联系方式我给你，怎么搞定我不管 |    统一管理网状资源    |     朋友圈     |
-| ![1701758596666](1701758596666.png) |       解释器模式（Interpreter Pattern）       | 给定一个语言，定义它的语法表示，并定义一个解释器，这个解释器使用该标识来解释语言中的句子 | 我想说”方言“，一切解释权都归我 |    实现特定语法解析    |    摩斯密码    |
-| ![1701757950712](1701757950712.png) |        观察者模式（Observer Pattern）         |            状态发生改变时通知观察者，一对多的关系            |          到点就通知我          |  解耦观察者与被观察者  |      闹钟      |
-| ![1701757941260](1701757941260.png) |         访问者模式（Visitor Pattern）         |                稳定数据结构，定义新的操作行为                | 横看成岭侧成峰，远近高低各不同 | 解耦数据结构和数据操作 |    KPI考核     |
-
 
 # 观察者模式与其他模式的关系
 - [责任链模式](https://refactoringguru.cn/design-patterns/chain-of-responsibility)、 [命令模式](https://refactoringguru.cn/design-patterns/command)、 [中介者模式](https://refactoringguru.cn/design-patterns/mediator)和[观察者模式](https://refactoringguru.cn/design-patterns/observer)用于处理请求发送者和接收者之间的不同连接方式：
@@ -180,7 +163,7 @@ LoD：Law of Demeter，最少知道原则
 
 CARP：Composition/Aggregate Reuse Principle，原则是尽量使用合成/聚合的方式，而不是使用继承
 
-### 总结
+## 总结
 * OCP：总纲，对扩展开放，对修改关闭
 * SRP：类的职责要单一
 * LSP：子类可以透明替换父类
