微服务中分布式事务seata源码解析

--- a/技术笔记/zhenk/8.面试专题/面试题.md
+++ b/技术笔记/zhenk/8.面试专题/面试题.md
@@ -22,6 +22,90 @@ getExtension(String name)  #根据key获取拓展对象
 ```
 
 ## MySQL索引失效的情况
+1. **未使用索引的列：** 查询中涉及的列没有被索引，或者查询条件中包含了不可被索引的列。确保你的查询条件中使用了适当的索引列。
+```SQL
+-- 错误的例子：没有使用索引的列 
+SELECT * FROM mytable WHERE non_indexed_column = 'value';  
+-- 正确的例子：使用了索引的列 
+SELECT * FROM mytable WHERE indexed_column = 'value';
+```
+
+2. **模糊查询：%的使用：** 在查询中使用`LIKE`并以通配符`%`开头的模糊查询可能导致索引失效，因为通配符在开头时索引无法被有效使用。
+```SQL
+-- 错误的例子：以%开头的模糊查询 
+SELECT * FROM mytable WHERE column LIKE '%value';  
+-- 正确的例子：避免以%开头 
+SELECT * FROM mytable WHERE column LIKE 'value%';
+```
+
+3. **函数的使用：** 如果在查询条件中使用了函数，可能会导致索引失效。例如，在索引列上使用函数会阻止优化器使用索引。
+```SQL
+-- 错误的例子：使用了函数 
+SELECT * FROM mytable WHERE UPPER(column) = 'VALUE';  
+-- 正确的例子：避免在索引列上使用函数 
+SELECT * FROM mytable WHERE column = 'value';
+```
+
+4. **数据类型不匹配：** 如果查询条件中的数据类型与索引列的数据类型不匹配，索引可能无法被使用。
+```SQL
+-- 错误的例子：数据类型不匹配 
+SELECT * FROM mytable WHERE indexed_column = '123';  
+-- 正确的例子：保持数据类型一致 
+SELECT * FROM mytable WHERE indexed_column = 123;
+```
+
+5. **复合索引的顺序：** 对于复合索引（包含多个列的索引），查询条件中列的顺序应该与索引的顺序一致，否则索引可能无法被利用。
+```SQL
+-- 错误的例子：查询条件列的顺序与复合索引不一致 
+SELECT * FROM mytable WHERE indexed_column2 = 'value' AND indexed_column1 = 'another_value';  
+-- 正确的例子：查询条件列的顺序与复合索引一致 
+SELECT * FROM mytable WHERE indexed_column1 = 'another_value' AND indexed_column2 = 'value';
+```
+
+6. **表统计信息过时：** 如果表的统计信息过时，优化器可能做出不准确的决策。你可以使用`ANALYZE TABLE`命令更新统计信息。
+```SQL
+ANALYZE TABLE mytable;
+```
+
+7. **数据分布不均匀：** 如果表中的数据分布不均匀，即某些值的重复性很高，优化器可能选择不使用索引。在这种情况下，可能需要重新设计索引或考虑其他优化策略。
+
+定位索引失效的具体原因可能需要查看查询执行计划（EXPLAIN），以便了解MySQL优化器的决策过程。通过分析执行计划，你可以确定是否使用了索引，以及哪些步骤导致了索引失效。
+
+8. **索引选择不当：** MySQL可能有多个可用索引，但优化器选择了不是最佳的索引。这可能是因为统计信息不准确，导致优化器做出错误的选择。使用`ANALYZE TABLE`可以更新统计信息。此外，可以通过使用`FORCE INDEX`提示强制选择特定的索引。
+```SQL    
+-- 强制使用特定的索引 
+SELECT * FROM mytable FORCE INDEX (index_name) WHERE indexed_column = 'value';
+```
+
+9. **数据量过大：** 当表的数据量很大时，即使有索引，查询可能仍然会变得很慢。在这种情况下，考虑使用分区表、垂直切分或其他数据分片策略来减少单个查询的数据量。
+
+10. **OR条件：** 在查询中使用多个`OR`条件可能导致索引失效。优化器可能无法同时使用多个索引。尽量避免使用多个`OR`条件，或者考虑使用联合索引。
+ ```SQL
+ -- 错误的例子：多个OR条件 
+ SELECT * FROM mytable WHERE column = 'value1' OR column = 'value2';  
+ -- 正确的例子：使用IN来替代多个OR条件 
+ SELECT * FROM mytable WHERE column IN ('value1', 'value2');
+ ```
+   
+11. **JOIN操作：** 在连接操作中，确保连接的列上有索引。否则，连接可能会导致性能下降。
+```SQL
+-- 确保连接的列有索引 
+SELECT * FROM table1 JOIN table2 ON table1.indexed_column = table2.indexed_column;
+```
+
+12. **子查询：** 在子查询中使用索引可能会有问题，特别是在MySQL版本较早的情况下。考虑使用`JOIN`来替代子查询。
+```SQL
+-- 使用JOIN替代子查询 
+SELECT * FROM mytable JOIN (SELECT id FROM anothertable WHERE condition) AS subquery ON mytable.id = subquery.id;
+```
+   
+13. **高并发情况：** 在高并发环境下，锁和资源争夺可能导致索引失效。考虑使用更高级的数据库架构，例如分布式数据库或缓存。
+14. **表碎片：** 表碎片可能会导致性能下降，包括索引的性能。定期进行表优化操作可以帮助修复碎片。
+```SQL
+OPTIMIZE TABLE mytable;
+```    
+
+总体而言，理解查询执行计划、监控数据库性能、适时更新统计信息、考虑数据分布和合理设计索引是保持MySQL索引高效的关键。优化数据库性能是一个综合的过程，需要结合具体的业务场景和数据库结构来进行调优。
 
 ## 什么是分布式事务以及它的主要作用
 
